# sio

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  bitfield.hh  configure.ac  enum.hh  main.cc  stdio.cc  stdio.hh  stream.cc  stream.hh  string.hh  writer.cc  writer.hh
include/sio/: bitfield.hh
include/sio/stream/: file.hh  memory.hh  stream.hh
include/sio/writer/: compat.hh  stdio.hh  writer.hh
m4/: ax_cxx_compile_stdcxx_14.m4
src/: Makefile.am
src/example/: Makefile.am  main.cc
src/libsio/: Makefile.am  stdio.cc  stream.cc  writer.cc
src/test/: Makefile.am  writer.cc
