# Copyright (c) 2015, Fabian Knorr
#
# This file is part of libsio.
#
# libsio is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libsio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with libsio.  If not, see <http://www.gnu.org/licenses/>.


lib_LTLIBRARIES = $(top_builddir)/libsio.la

__top_builddir__libsio_la_SOURCES = \
    stdio.cc \
    stream.cc \
    writer.cc

__top_builddir__libsio_la_CPPFLAGS = -I$(top_srcdir)/include
